--- a/marvelApp/Resources/Localization/Localizable.strings
+++ b/marvelApp/Resources/Localization/Localizable.strings
@@ -1,6 +1,6 @@
 /* 
   Localization.strings
-  viperProject
+  marvelApp
 
   Created by Hamza Jerbi on 21/01/2019.
   Copyright © 2019 Hamza Jerbi. All rights reserved.
